--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,10 @@
+body {
+  background-color: red !important;
+}
+
 @import "tailwindcss";
-@import "react-toastify/dist/ReactToastify.css";
-@import "react-datepicker/dist/react-datepicker.css";
+/* @import "react-toastify/dist/ReactToastify.css"; */
+/* @import "react-datepicker/dist/react-datepicker.css"; */
 
 @theme {
   --color-indigo-50: #eef2ff;
